--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "homepage" "https://mikea112987.github.io/test"
+  "homepage": "https://mikea112987.github.io/test",
   "bugs": {
     "url": "https://github.com/Mikea112987/tests/issues"
   },
